@@ -139,6 +139,7 @@ v13.0.00
 		Timetable Admin: added search and filters to course enrolment and course management pages
 		Timetable Admin: added bulk action to copy selected students to another class
 		Timetable Admin: code clean up on bulk actions when managing course enrolment by class
+		Timetable Admin: removed required field notice on location field when editing a class in a timetable
 		User Admin: fixed PHP Notice issue in user import
 		User Admin: tweaked link to family from Manage Users to fix year group no-show issue
 		User Admin: fixed PHP Notice issue in student enrolment import
